Fix the issue - Advanced Search -> Books alignment

--- a/_sass/includes/modules/_book-blocks.scss
+++ b/_sass/includes/modules/_book-blocks.scss
@@ -300,17 +300,18 @@
       justify-content: flex-start;
       flex-wrap: wrap;
       > li {
-        margin-right: 20px;
+        margin-left: auto;
+        margin-right: auto;
         width: $col-6;
         @include w640 {
           width: $col-4;
         }
         width: calc(50% - 2.5em);
         @include w1000 {
-          width: calc(30% - (1.5em*(1/3)));
+          width: calc(33.33% - (3em*(1/3)));
         }
         @include w1280 {
-          width: calc(24% - (1.5em*(3/4)));
+          width: calc(25% - (3em*(1/4)));
         }
       }
     }
